Refactor authentication includes across multiple files
- Replaced instances of 'auth-simple.php' with 'auth.php' in various scripts to standardize authentication handling.
- Updated file paths to use __DIR__ for better portability.
- Added a new file 'ultra-secure-file-safety-dashboard.php' to maintain backwards compatibility with login redirects while delegating to the enhanced analyzer dashboard.

--- a/login.html
+++ b/login.html
@@ -225,7 +225,7 @@
             hideMessages();
 
             try {
-                const response = await fetch('authenticate-simple.php', {
+                const response = await fetch('authenticate.php', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -241,7 +241,7 @@
                     setTimeout(() => {
                         // Prüfe ob eine spezifische Weiterleitung angefordert wurde
                         const urlParams = new URLSearchParams(window.location.search);
-                        const redirect = urlParams.get('redirect') || 'ultra-secure-file-safety-dashboard.php';
+                        const redirect = urlParams.get('redirect') || 'index.php';
                         window.location.href = redirect;
                     }, 1000);
                 } else {
